# 2D-platformer

./: CMakeLists.txt
assets/dev/: death_star.ase  death_star.json  grass_block.ase  grass_block.json  ground.ase  ground.json  ground_block.ase  ground_block.json  hulking_knight.ase  hulking_knight.json  menu_background.ase  menu_background.json  mother_tick.ase  mother_tick.json  obunga.ase  obunga.json  right_triangle.ase  right_triangle.json  soccer_ball.ase  soccer_ball.json  wood_block.ase  wood_block.json
sources/: log.txt  save.json
sources/Collision/: Contact_Listener.cpp  Contact_Listener.hpp
sources/Core/: Game_2D.cpp  Game_2D.hpp  Main.cpp
sources/Entity/: Enemy.cpp  Enemy.hpp  Game_Object.cpp  Game_Object.hpp  Player.cpp  Player.hpp
sources/Game_State/: Game_Over_State.cpp  Game_State.hpp  Game_State_Manager.cpp  Game_State_Manager.hpp  LeveL_1_State.cpp  Level_2_State.cpp  Level_3_State.cpp  Level_4_State.cpp  Level_5_State.cpp  Main_Menu_State.cpp  Paused_State.cpp  Settings_State.cpp
sources/Media/: Animation.cpp  Animation.hpp  Audio.hpp  Audio_Manager.cpp  Button.cpp  Button.hpp  Camera.cpp  Camera.hpp  Font_Manager.cpp  Icon.aps  Icon.rc  Key_State.hpp  Renderer.cpp  Renderer.hpp  Sprite.cpp  Sprite.hpp  Text.hpp  Texture_Manager.cpp  Texture_Manager.hpp  User_Interface.cpp  User_Interface.hpp  Window.cpp  Window.hpp
sources/Player_State/: Attack_State.cpp  Dead_State.cpp  Free_Fall_State.cpp  Hit_Ground_State.cpp  Idle_State.cpp  Jump_State.cpp  Player_State.hpp  Player_State_Manager.cpp  Player_State_Manager.hpp  Walk_State.cpp
sources/Utility/: Assert.hpp  Log.cpp  Log.hpp  Math.cpp  Math.hpp  Memory.cpp  Memory.hpp  Perf_Monitor.cpp  Perf_Monitor.hpp  Save_System.cpp  Save_System.hpp
